@@ -1,3 +1,10 @@
+2005-03-12 Alain Magloire
+	Plan item 79518: for PathEntry variable manager.
+	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
+	* src/org/eclipse/cdt/core/resources/IPathEntryVariableManager.java
+	* src/org/eclipse/cdt/core/resources/PathEntryVariableChangeEvent.java
+	* src/org/eclipse/cdt/internal/core/PathEntryVariableManager.java
+
 2005-03-03 Alain Magloire
 	Part of plan item 79518: for PathEntry variable manager.
 	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
